# Atulya-Launch

./: .env.example  .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
atulya_launch/: __main__.py  cli.py  core.py  utils.py
atulya_launch/templates/bind/: named.conf.local  zone.template
atulya_launch/templates/dovecot/: dovecot.conf
atulya_launch/templates/fail2ban/: jail.local
atulya_launch/templates/fail2ban/filter.d/: atulya-panel.conf
atulya_launch/templates/nginx/: panel.conf  vhost.conf
atulya_launch/templates/postfix/: main.cf
atulya_launch/templates/systemd/: atulya-launch.service
atulya_launch/templates/ufw/: applications.xml
atulya_launch/web/: app.py  auth.py
atulya_launch/web/api/: apitokens.py  apps.py  audit.py  autoresponders.py  backup.py  backupencryption.py  backups3.py  bandwidth.py  bandwidthlimit.py  cloudbackup.py  clouddns.py  cloudflare.py  cron.py  cronscheduler.py  csr.py  csrf.py  db.py  dbimportexport.py  dbschedulebackup.py  dbusers.py  dkim.py  dns.py  dnsimportexport.py  docker.py  email.py  emailalerts.py  emailforwarding.py  emailrouting.py  errorlogs.py  errorpages.py  fail2ban.py  filecompress.py  files.py  fileshare.py  firewall.py  ftp.py  gitdeploy.py  healthdashboard.py  hotlink.py  ipaccess.py  (+46 more)
atulya_launch/web/api/plugins/: __init__.py  analytics.py  antivirus.py  cms_installer.py  reseller.py  security_advisor.py  webmail.py
atulya_launch/web/static/: index.html  login.html
atulya_launch/web/static/css/: style.css
atulya_launch/web/static/js/: app.js
scripts/: install.sh
src/atulya_launch/: utils.py
tests/: test_basic.py  test_plugins.py
