[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atulya-launch"
dynamic = ["version"]
description = "Lightweight cPanel alternative — one-click server management with < 50MB RAM idle"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Atulya Tantra", email = "dev@atulya.launch"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.0",
    "rich>=12.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "websockets>=11.0",
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
linux = ["systemd-python>=234"]
dev = ["pytest>=7.0", "ruff"]

[project.urls]
Homepage = "https://github.com/atulyaai/Atulya-Launch"
Issues = "https://github.com/atulyaai/Atulya-Launch/issues"

[project.scripts]
atulya-launch = "atulya_launch.cli:main"

[tool.setuptools.dynamic]
version = {attr = "atulya_launch.__version__"}

[tool.setuptools.packages.find]
include = ["atulya_launch*"]

[tool.setuptools.package-data]
"atulya_launch" = [
    "templates/**/*.service",
    "templates/**/*.conf",
    "templates/**/*.template",
    "templates/**/*.cf",
    "templates/**/*.xml",
    "templates/**/*.xml",
    "static/**/*",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
